--- a/page/static/page/main.css
+++ b/page/static/page/main.css
@@ -1,5 +1,43 @@
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+    padding: 0;
+    margin: 0;
+}
+
+#url-container {
+    font-size: 1.25rem;
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace, Arial, Helvetica, sans-serif;
+
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+
+    background-color: rgb(44, 7, 68);
+    color: rgb(247, 247, 247)
+}
+
+main {
+    text-align: center;
+    animation-name: fade;
+    animation-duration: 1s;
+}
+
+main > * + * {
+    margin-top: 1.25em;
+}
+
+form > * + * {
+    margin-top: 1.25em;
 }
 
 .mono {
@@ -8,4 +46,31 @@ body {
 
 .bold {
     font-weight: bold;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+        transform: translateY(1rem);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0rem);
+    }
+}
+
+button {
+    padding: 0.75em 1em;
+    border: 1px solid transparent;
+    background-color: #d946ef;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: 0.2s all linear;
+    font-size: 0.875rem;
+}
+
+button:hover {
+    background-color: #e879f9;
+    cursor: pointer;
 }
