Change redirect message to h2

--- a/page/templates/page/detail.html
+++ b/page/templates/page/detail.html
@@ -19,7 +19,7 @@
 
 <body>
   <main>
-    <p>Redirecting in 3 seconds...</p>
+    <h2>Redirecting in 3 seconds...</h2>
     <p>If it doesn't work, here's the link to <a href="{{redirect_url}}">{{redirect_url}}</a>.</p>
   </main>
 </body>
