--- a/page/templates/page/detail.html
+++ b/page/templates/page/detail.html
@@ -14,7 +14,7 @@
 
   <meta http-equiv="refresh" content="3; url={{redirect_url}}">
 
-  <link rel="stylesheet" href="{% static 'page/main.css' %}">
+  <link rel="stylesheet" href="{% static 'page/detail.css' %}">
 </head>
 
 <body>
