--- a/page/static/page/detail.css
+++ b/page/static/page/detail.css
@@ -30,6 +30,8 @@ main {
     text-align: center;
     animation-name: fade;
     animation-duration: 1s;
+
+    max-width: 800px;
 }
 
 main > * + * {
